Add file of user profile.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
 /* Style the container for profile cards */
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #28223f;
+  font-family: Montserrat, sans-serif;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  min-height: 100vh;
+  margin: 0;
+}
+
 #card-container {
   display: flex;
   flex-wrap: wrap;
@@ -6,43 +25,108 @@
   gap: 20px;
 }
 
-/* Style the individual profile cards */
-.profile-card {
-  width: 300px;
-  padding: 20px;
-  border: 1px solid #ddd;
+h3 {
+  margin: 10px 0;
+}
+
+h6 {
+  margin: 5px 0;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.card-box {
+  background-color: #231e39;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+  color: #b3b8cd;
+  padding-top: 30px;
+  position: relative;
+  width: 350px;
+  max-width: 100%;
   text-align: center;
 }
 
-/* Style the profile card's heading (user's name) */
-.profile-card h2 {
-  font-size: 24px;
-  color: #333;
+.card-box .pro {
+  color: #231e39;
+  background-color: #febb0b;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 3px 7px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
-/* Style the profile card's description (user's bio) */
-.profile-card p {
-  font-size: 16px;
-  color: #777;
-}
-
-/* Style the profile card's profile picture */
-.profile-card img {
-  max-width: 100%;
+.card-box .round {
+  border: 1px solid #03bfcb;
   border-radius: 50%;
-  margin-bottom: 10px;
+  padding: 7px;
 }
 
-/* Style links or buttons within the profile card */
-.profile-card a {
+button.primary {
+  background-color: #03bfcb;
+  border: 1px solid #03bfcb;
+  border-radius: 3px;
+  color: #231e39;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  padding: 10px 25px;
+}
+
+button.primary.ghost {
+  background-color: transparent;
+  color: #02899c;
+}
+
+.skills {
+  background-color: #1f1a36;
+  text-align: left;
+  padding: 15px;
+  margin-top: 30px;
+}
+
+.skills ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.skills ul li {
+  border: 1px solid #2d2747;
+  border-radius: 2px;
+  display: inline-block;
+  font-size: 12px;
+  margin: 0 7px 7px 0;
+  padding: 7px;
+}
+
+footer {
+  background-color: #222;
+  color: #fff;
+  font-size: 14px;
+  bottom: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 999;
+}
+
+footer p {
+  margin: 10px 0;
+}
+
+footer i {
+  color: red;
+}
+
+footer a {
+  color: #3c97bf;
   text-decoration: none;
-  color: #007bff;
-  transition: color 0.3s;
-}
-
-.profile-card a:hover {
-  color: #0056b3;
 }
