--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Style the container for profile cards */
 @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 * {
@@ -6,16 +5,48 @@
 }
 
 body {
-  background-color: #28223f;
+  background: no-repeat center/auto url("https://images.pexels.com/photos/1006627/pexels-photo-1006627.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
   font-family: Montserrat, sans-serif;
-
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
-
-  min-height: 100vh;
   margin: 0;
+}
+
+header {
+	width: 100%;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	padding: 0 2rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	background-color: #fff;
+	top: 0%;
+	z-index: 10;
+
+	backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgb(255 255 255 / 59%);
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+
+header nav a {
+    text-decoration: none;
+    color: black;
+    margin-right: 1rem;
+    font-weight: 600;
+}
+
+header h1 {
+	color: #febb0b;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-size: 1.5rem;
+	font-weight: bold;
 }
 
 #card-container {
@@ -23,20 +54,35 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  padding-top: 6rem;
+  padding-bottom: 2rem;
 }
 
 h3 {
   margin: 10px 0;
+  color: #04060a;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 h6 {
   margin: 5px 0;
   text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #fff;
+}
+
+.skill-heading {
+    color: #000000;
+    font-size: 13px;
 }
 
 p {
   font-size: 14px;
   line-height: 21px;
+  letter-spacing: 1px;
+  color: #febb0b;
+  font-weight: 600;
 }
 
 .card-box {
@@ -49,6 +95,12 @@ p {
   width: 350px;
   max-width: 100%;
   text-align: center;
+
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgb(255 255 255 / 43%);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
 .card-box .pro {
@@ -64,31 +116,34 @@ p {
 }
 
 .card-box .round {
-  border: 1px solid #03bfcb;
+  border: 1px solid #ffffff;
   border-radius: 50%;
   padding: 7px;
 }
 
 button.primary {
-  background-color: #03bfcb;
-  border: 1px solid #03bfcb;
-  border-radius: 3px;
-  color: #231e39;
-  font-family: Montserrat, sans-serif;
-  font-weight: 500;
-  padding: 10px 25px;
+	background-color: #febb0b;
+    border: 1px solid #febb0b;
+    border-radius: 3px;
+    color: #000000;
+    font-family: Montserrat, sans-serif;
+    font-weight: 700;
+    padding: 10px 25px;
+    cursor: pointer;
 }
 
 button.primary.ghost {
   background-color: transparent;
-  color: #02899c;
+  color: #febb0b;
+  cursor: pointer;
 }
 
 .skills {
-  background-color: #1f1a36;
+  background-color: #ffffff42;
   text-align: left;
   padding: 15px;
   margin-top: 30px;
+  border-radius: 12px;
 }
 
 .skills ul {
@@ -102,6 +157,7 @@ button.primary.ghost {
   border-radius: 2px;
   display: inline-block;
   font-size: 12px;
+  color: #04060a;
   margin: 0 7px 7px 0;
   padding: 7px;
 }
