--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  /* gap: 20px; */
   padding-top: 6rem;
   padding-bottom: 2rem;
 }
@@ -91,11 +91,11 @@ p {
   box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
   color: #b3b8cd;
   padding-top: 30px;
+  margin: 10px;
   position: relative;
   width: 350px;
   max-width: 100%;
   text-align: center;
-
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgb(255 255 255 / 43%);
