--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,500;1,700&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background: no-repeat center/auto url("https://images.pexels.com/photos/3811019/pexels-photo-3811019.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background: no-repeat center/auto url("https://images.unsplash.com/photo-1432847712612-926caafaa802?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80");
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
-  font-family: Montserrat, sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -37,7 +38,7 @@ header {
 header nav a {
     text-decoration: none;
     color: black;
-    margin-right: 1rem;
+    margin-left: 1rem;
     font-weight: 600;
 }
 
@@ -69,7 +70,7 @@ h6 {
   margin: 5px 0;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color: #fff;
+  color: #625b5b;
 }
 
 .skill-heading {
