Footer style remove

--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,500;1,700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background: no-repeat center/auto url("https://images.unsplash.com/photo-1432847712612-926caafaa802?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80");
+  background: no-repeat center/auto
+    url("https://images.unsplash.com/photo-1432847712612-926caafaa802?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80");
   background-size: cover;
   background-attachment: fixed;
   height: 100vh;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   /* font-family: 'Roboto', sans-serif; */
   display: flex;
   align-items: center;
@@ -18,37 +19,37 @@ body {
 }
 
 header {
-	width: 100%;
+  width: 100%;
   height: 3.5rem;
-	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-	padding: 0 1rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: fixed;
-	background-color: #fff;
-	top: 0%;
-	z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  background-color: #fff;
+  top: 0%;
+  z-index: 10;
 
-	backdrop-filter: blur(16px) saturate(180%);
+  backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background-color: rgb(74 70 70 / 43%);
   border-bottom: 1px solid rgba(209, 213, 219, 0.3);
 }
 
 header nav a {
-    text-decoration: none;
-    color: #febb0b;
-    margin-left: 1rem;
-    font-weight: 600;
+  text-decoration: none;
+  color: #febb0b;
+  margin-left: 1rem;
+  font-weight: 600;
 }
 
 header h1 {
-	color: #febb0b;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	font-size: 1.5rem;
-	font-weight: bold;
+  color: #febb0b;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 #card-container {
@@ -76,8 +77,8 @@ h6 {
 }
 
 .skill-heading {
-    color: #febb0b;
-    font-size: 13px;
+  color: #febb0b;
+  font-size: 13px;
 }
 
 p {
@@ -127,14 +128,14 @@ p {
 }
 
 button.primary {
-	background-color: #febb0b;
-    border: 1px solid #febb0b;
-    border-radius: 3px;
-    color: #000000;
-    font-family: Montserrat, sans-serif;
-    font-weight: 700;
-    padding: 10px 25px;
-    cursor: pointer;
+  background-color: #febb0b;
+  border: 1px solid #febb0b;
+  border-radius: 3px;
+  color: #000000;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  padding: 10px 25px;
+  cursor: pointer;
 }
 
 button.primary.ghost {
@@ -166,29 +167,4 @@ button.primary.ghost {
   color: #04060a;
   margin: 0 7px 7px 0;
   padding: 7px;
-}
-
-footer {
-  background-color: #222;
-  color: #fff;
-  font-size: 14px;
-  bottom: 0;
-  position: fixed;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 999;
-}
-
-footer p {
-  margin: 10px 0;
-}
-
-footer i {
-  color: red;
-}
-
-footer a {
-  color: #3c97bf;
-  text-decoration: none;
 }
