Add hover effect of scaling on card box buttons

--- a/style.css
+++ b/style.css
@@ -176,3 +176,13 @@ header nav a:hover {
 .fa-github {
   font-size: 1.2rem; 
 }
+
+.card-box h3, .card-box button.primary {
+  transition: transform 0.3s ease; 
+  margin: 2px;
+}
+
+.card-box h3:hover, .card-box button.primary:hover {
+  transform: scale(1.1); 
+}
+
